--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,25 +1,25 @@
 <mat-card>
   <mat-card-title>Login</mat-card-title>
   <mat-card-content>
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <form [formGroup]="loginForm">
       <p>
         <mat-form-field>
-          <input type="text" matInput placeholder="Username" formControlName="username">
+          <input type="text" matInput placeholder="Username" formControlName="username" required>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field>
-          <input type="password" matInput placeholder="Password" formControlName="password">
+          <input type="password" matInput placeholder="Password" formControlName="password" required>
         </mat-form-field>
       </p>
       <p *ngIf="error" class="loginError">
         {{ errorMessage }}
       </p>
       <p class="button">
-        <button type="submit" mat-button>Login</button>
+        <button mat-button type="submit" (click)="submitForm()" [disabled]="!this.loginForm.valid">Login</button>
       </p>
       <p class="button">
-        <button type="button" (click)="register()" mat-button>Register</button>
+        <button mat-button (click)="register()" >Register</button>
       </p>
     </form>
   </mat-card-content>
