--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -21,7 +21,7 @@
         {{ errorMessage }}
       </p>
       <p class="button">
-        <button type="submit" mat-button>Register</button>
+        <button type="submit" mat-button  [disabled]="!this.signupForm.valid">Register</button>
       </p>
       <p class="button">
         <button type="button" (click)="login()" mat-button>Login</button>
