Forgot password added as component Auth service method modified Button in login added

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -21,6 +21,9 @@
       <p class="button">
         <button mat-button (click)="register()" >Register</button>
       </p>
+      <p class="button">
+        <button mat-button (click)="forgotPassword()" >Forgot Password</button>
+      </p>
     </form>
   </mat-card-content>
 </mat-card>
